<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Orientation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_b">The first button</string>
    <string name="second_b">The second button</string>
    <string name="third_b">The third button</string>
    <string name="fourth_b">The fourth button</string>
    <string name="fifth_b">The fifth button</string>
    <string name="sixth_b">The sixth button</string>
    <string name="orient">What orientation?</string>

</resources>
